--- a/src/styles/waitlist.css
+++ b/src/styles/waitlist.css
@@ -58,7 +58,7 @@
 }
 
 .form-group label.optional {
-  color: var(--primary-color);
+  color: var(--text-color);
 }
 
 .form-group input:focus {
